# haskell_gui

./: .gitignore  README.md  gui.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
