name:                gui
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/gui#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       directory,
                       JuicyPixels,
                       gloss,
                       repa,
                       repa-fftw >= 3.2.3,
                       gtk
  default-language:    Haskell2010

executable gui-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       gtk,
                       gui
  default-language:    Haskell2010
